--- a/SportsApp/Views/Base.lproj/Main.storyboard
+++ b/SportsApp/Views/Base.lproj/Main.storyboard
@@ -178,7 +178,7 @@
                                                             <color key="backgroundColor" systemColor="systemYellowColor"/>
                                                         </view>
                                                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zHt-tk-Mw3">
-                                                            <rect key="frame" x="362" y="10" width="41" height="40"/>
+                                                            <rect key="frame" x="258" y="10" width="41" height="40"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KsH-Bo-nQ8">
@@ -397,10 +397,6 @@
                                 <rect key="frame" x="20" y="164" width="374" height="523"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CJd-TQ-aCY">
-                                <rect key="frame" x="0.0" y="88" width="414" height="760"/>
-                                <color key="backgroundColor" red="0.069541178643703461" green="0.19431370496749878" blue="0.051444403827190399" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DJU-Ku-8mi">
                                 <rect key="frame" x="20" y="208" width="374" height="640"/>
                                 <color key="backgroundColor" red="0.66693359613418579" green="0.90824025869369507" blue="0.47291165590286255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -439,18 +435,32 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sports News" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ByJ-WI-D65">
+                                <rect key="frame" x="114" y="135" width="269" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sports" translatesAutoresizingMaskIntoConstraints="NO" id="bXf-OQ-AX4">
+                                <rect key="frame" x="20" y="95" width="86" height="68"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="86" id="QDv-RQ-KA2"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="nja-pJ-pi7"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.069541178643703461" green="0.19431370496749878" blue="0.051444403827190399" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="bXf-OQ-AX4" firstAttribute="leading" secondItem="nja-pJ-pi7" secondAttribute="leading" constant="20" id="6Ed-UC-LtG"/>
+                            <constraint firstItem="ByJ-WI-D65" firstAttribute="top" secondItem="nja-pJ-pi7" secondAttribute="top" constant="47" id="MLN-h6-VlA"/>
+                            <constraint firstItem="25k-03-vmH" firstAttribute="top" secondItem="bXf-OQ-AX4" secondAttribute="bottom" constant="1" id="PXm-pq-Uho"/>
                             <constraint firstItem="nja-pJ-pi7" firstAttribute="trailing" secondItem="DJU-Ku-8mi" secondAttribute="trailing" constant="20" id="TW6-5Q-0Gj"/>
+                            <constraint firstItem="bXf-OQ-AX4" firstAttribute="top" secondItem="nja-pJ-pi7" secondAttribute="top" constant="7" id="VbU-cw-o4J"/>
                             <constraint firstItem="DJU-Ku-8mi" firstAttribute="leading" secondItem="nja-pJ-pi7" secondAttribute="leading" constant="20" id="cCP-pT-K6n"/>
                             <constraint firstAttribute="bottom" secondItem="DJU-Ku-8mi" secondAttribute="bottom" constant="48" id="dHs-aa-ikz"/>
+                            <constraint firstItem="ByJ-WI-D65" firstAttribute="leading" secondItem="bXf-OQ-AX4" secondAttribute="trailing" constant="8" symbolic="YES" id="hce-XA-r22"/>
                             <constraint firstItem="DJU-Ku-8mi" firstAttribute="top" secondItem="nja-pJ-pi7" secondAttribute="top" constant="120" id="hgr-9g-lXU"/>
-                            <constraint firstItem="CJd-TQ-aCY" firstAttribute="leading" secondItem="nja-pJ-pi7" secondAttribute="leading" id="i5e-Hz-jRW"/>
-                            <constraint firstItem="CJd-TQ-aCY" firstAttribute="trailing" secondItem="nja-pJ-pi7" secondAttribute="trailing" id="jZ4-2T-HAo"/>
-                            <constraint firstItem="CJd-TQ-aCY" firstAttribute="top" secondItem="nja-pJ-pi7" secondAttribute="top" id="lq2-NM-jOF"/>
-                            <constraint firstItem="CJd-TQ-aCY" firstAttribute="bottom" secondItem="DJU-Ku-8mi" secondAttribute="bottom" id="zY1-9L-idg"/>
+                            <constraint firstItem="nja-pJ-pi7" firstAttribute="trailing" secondItem="ByJ-WI-D65" secondAttribute="trailing" constant="31" id="qVr-jg-1vy"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="fVL-8B-OG0"/>
@@ -462,7 +472,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7U1-b1-Qgx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1160.8695652173915" y="58.695652173913047"/>
+            <point key="canvasLocation" x="1160.8695652173915" y="58.258928571428569"/>
         </scene>
         <!--Favourite-->
         <scene sceneID="Ws4-ec-zJD">
@@ -698,20 +708,19 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="217"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5mQ-Dh-2kO">
-                                                    <rect key="frame" x="40" y="0.0" width="334" height="217"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                    <color key="textColor" systemColor="labelColor"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="50" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rfD-5i-Ody">
+                                                    <rect key="frame" x="10" y="7" width="394" height="210"/>
+                                                    <mutableString key="text">Label LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel Label</mutableString>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="5mQ-Dh-2kO" firstAttribute="top" secondItem="a6H-I4-085" secondAttribute="top" id="0GA-KB-pQv"/>
-                                                <constraint firstAttribute="trailing" secondItem="5mQ-Dh-2kO" secondAttribute="trailing" constant="40" id="DoV-E0-UcT"/>
-                                                <constraint firstAttribute="bottom" secondItem="5mQ-Dh-2kO" secondAttribute="bottom" id="MKt-r3-Rx8"/>
-                                                <constraint firstItem="5mQ-Dh-2kO" firstAttribute="leading" secondItem="a6H-I4-085" secondAttribute="leading" constant="40" id="thw-ES-3ZQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="rfD-5i-Ody" secondAttribute="trailing" constant="10" id="2Q4-4p-FEL"/>
+                                                <constraint firstItem="rfD-5i-Ody" firstAttribute="top" secondItem="a6H-I4-085" secondAttribute="top" constant="7" id="lpX-rS-BGJ"/>
+                                                <constraint firstAttribute="bottom" secondItem="rfD-5i-Ody" secondAttribute="bottom" id="mUo-jX-JVh"/>
+                                                <constraint firstItem="rfD-5i-Ody" firstAttribute="leading" secondItem="a6H-I4-085" secondAttribute="leading" constant="10" id="uoN-yw-s0v"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -733,7 +742,6 @@
                                                     <state key="normal" image="inst"/>
                                                     <connections>
                                                         <action selector="openInstagramAction:" destination="7D9-70-Qxg" eventType="touchUpInside" id="Um0-nT-Km4"/>
-                                                        <segue destination="bW6-1K-l9N" kind="push" identifier="aaa1" id="3dO-Gb-hH8"/>
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IG8-Ao-PMg">
@@ -741,7 +749,6 @@
                                                     <state key="normal" image="twi"/>
                                                     <connections>
                                                         <action selector="openTwitterAction:" destination="7D9-70-Qxg" eventType="touchUpInside" id="cLS-Ki-hBe"/>
-                                                        <segue destination="bW6-1K-l9N" kind="push" identifier="aaa2" id="jg1-D2-Fko"/>
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tze-gC-9pb">
@@ -749,7 +756,6 @@
                                                     <state key="normal" image="face"/>
                                                     <connections>
                                                         <action selector="openFacebookAction:" destination="7D9-70-Qxg" eventType="touchUpInside" id="0Za-uY-8RW"/>
-                                                        <segue destination="bW6-1K-l9N" kind="push" identifier="aaa3" id="hIU-1d-CKy"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -786,7 +792,7 @@
                         <outlet property="facebookBtn" destination="tze-gC-9pb" id="QYa-rk-hyY"/>
                         <outlet property="instgramBtn" destination="aER-qw-eP9" id="xph-SH-NSZ"/>
                         <outlet property="teamCountry" destination="Ww7-MV-bGb" id="6xN-u7-Kuo"/>
-                        <outlet property="teamDesc" destination="5mQ-Dh-2kO" id="Gsh-0z-dPG"/>
+                        <outlet property="teamDesc" destination="rfD-5i-Ody" id="CPG-cO-3Il"/>
                         <outlet property="teamImgView" destination="qDX-ha-qEX" id="uEP-L2-jzR"/>
                         <outlet property="teamLeague" destination="hyw-ET-XVC" id="XBv-la-JwC"/>
                         <outlet property="teamName" destination="JFo-Xg-Ja2" id="vjm-1k-98W"/>
@@ -795,11 +801,10 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EFu-16-fax" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3590" y="1235"/>
+            <point key="canvasLocation" x="3589.8550724637685" y="1234.8214285714284"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="hIU-1d-CKy"/>
         <segue reference="ev6-Cf-jqM"/>
     </inferredMetricsTieBreakers>
     <resources>
@@ -809,12 +814,10 @@
         <image name="homekit" catalog="system" width="128" height="106"/>
         <image name="inst" width="32" height="32"/>
         <image name="p" width="32" height="32"/>
+        <image name="sports" width="64" height="64"/>
         <image name="std" width="900" height="498"/>
         <image name="twi" width="32" height="32"/>
         <image name="y" width="32" height="32"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
